# SecretToEnv

./: LICENSE  README.md  pyproject.toml
secrettoenv/: cli.py  secret_from_file.py  secret_from_kubernetes.py
